name:                elocrypt
version:             0.2.0
synopsis:            A library that creates pronounceable passwords
homepage:            https://www.github.com/sgillespie/elocrypt
license:             OtherLicense
license-file:        LICENSE
author:              Sean Gillespie
maintainer:          sean@mistersg.net
copyright:           Copywright: (c) 2015 Sean Gillespie
category:            Cryptography
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Elocrypt.Password,
                       Elocrypt.Trigraph
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.9,
                       MonadRandom,
                       random
  hs-source-dirs:      src/lib
  default-language:    Haskell2010

executable elocrypt
  build-depends:       base >= 4.7 && <4.9,
                       elocrypt,
                       random
  default-language:    Haskell2010
  hs-source-dirs:      src/cli
  main-is:             Main.hs

test-suite test
  build-depends:       base >= 4.7 && <4.9,
                       elocrypt,
                       QuickCheck,
                       random,
                       tasty,
                       tasty-quickcheck,
                       tasty-th
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Tests.hs
  type:                exitcode-stdio-1.0
