name:                elocrypt
version:             0.3.0
synopsis:            Generate easy-to-remember, hard-to-guess passwords
homepage:            https://www.github.com/sgillespie/elocrypt
license:             OtherLicense
license-file:        LICENSE
author:              Sean Gillespie
maintainer:          sean@mistersg.net
copyright:           Copywright: (c) 2015 Sean Gillespie
category:            Cryptography
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

description:
  Elocrypt is a Haskell library that generates pronounceable, hard-to-guess passwords..
  like, harder than Vince Carter's need cartilage. Elocrypt includes a library and
  program.

source-repository head
  type: git
  location: https://github.com/sgillespie/elocrypt.git

source-repository this
  type: git
  location: https://github.com/sgillespie/elocrypt.git
  tag: v0.2.0
                  
library
  exposed-modules:     Elocrypt.Password,
                       Elocrypt.Trigraph
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.9,
                       MonadRandom,
                       random
  hs-source-dirs:      src/lib
  default-language:    Haskell2010

executable elocrypt
  build-depends:       base >= 4.7 && <4.9,
                       elocrypt,
                       random
  default-language:    Haskell2010
  hs-source-dirs:      src/cli
  main-is:             Main.hs

test-suite test
  build-depends:       base >= 4.7 && <4.9,
                       elocrypt,
                       MonadRandom,
                       QuickCheck,
                       random,
                       tasty,
                       tasty-quickcheck,
                       tasty-th
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Tests.hs
  type:                exitcode-stdio-1.0
