cabal-version:       3.4
name:                gibberish
version:             3.0.0
synopsis:            Generate easy-to-remember, hard-to-guess passwords
homepage:            https://www.github.com/sgillespie/gibberish
license:             MIT
license-file:        LICENSE
author:              Sean D Gillespie
maintainer:          sean@mistersg.net
category:            Cryptography
build-type:          Simple

description:
  Generates pronounceable passwords that are easy-to-remember and hard-to-guess.

extra-source-files:
  README.md,
  test/*.hs,
  test/Test/*.hs,
  test/Test/Elocrypt/*.hs

common common-options
  ghc-options:
    -Wall
    -Wcompat
    -- Not yet
    -- -Werror
    -Widentities
    -Wderiving-defaults
    -Wmissing-deriving-strategies
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Wnoncanonical-monad-instances
    -fhide-source-paths
    -Wmissing-export-lists
    -Wpartial-fields
  default-extensions:
    DeriveAnyClass,
    DerivingStrategies,
    LambdaCase,
    OverloadedStrings,
    RecordWildCards
  other-extensions:
    OverloadedLists,
    TemplateHaskell
  default-language: GHC2021

library
  import:          common-options
  exposed-modules:
    Data.Elocrypt,
    Data.Elocrypt.Trigraph,
    Data.Elocrypt.Types,
    Data.Elocrypt.Utils
  build-depends:
    base >=4.14 && <5,
    MonadRandom,
    aeson,
    containers,
    random,
    text,
    text-show
  hs-source-dirs:  src

executable gibber
  import:         common-options
  build-depends:
    base >= 4.14 && <5,
    gibberish,
    random
  hs-source-dirs: app
  main-is:        Main.hs

library testlib
  import:         common-options
  exposed-modules:
    Test.Gibberish.Gen
  build-depends:
    base >= 4.14 && < 5,
    gibberish,
    hedgehog
  hs-source-dirs:
    testlib

test-suite test
  import:         common-options
  build-depends:
    base >= 4.14 && <5,
    gibberish:{gibberish,testlib},
    aeson,
    MonadRandom,
    proctest,
    QuickCheck,
    containers,
    hedgehog,
    random,
    tasty,
    tasty-hedgehog,
    tasty-quickcheck,
    tasty-th >= 0.1.7
  hs-source-dirs: test
  main-is:        Tests.hs
  other-modules:
    Test.Elocrypt.Instances,
    Test.Elocrypt.QuickCheck,
    Test.Elocrypt.TrigraphTest,
    Test.Elocrypt.TypesTest,
    Test.Elocrypt.UtilsTest,
    Test.ElocryptTest
  default-extensions:
    TemplateHaskell
  type:
    exitcode-stdio-1.0
